Added Exception handlers and a api response class