@@ -6,6 +6,10 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.security.access.SecurityConfig;
 import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.AuthenticationProvider;
+import org.springframework.security.authentication.ProviderManager;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -18,11 +22,14 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
 import java.util.List;
+
+import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration
 @EnableWebSecurity
@@ -30,21 +37,25 @@ public class SecurityConfiguration {
 
 
     private final UserRepo userRepo;
+    private final UserDetailsServiceImpl userDetailsService;
 
-    public SecurityConfiguration(UserRepo userRepo){
+    public SecurityConfiguration(UserRepo userRepo, UserDetailsServiceImpl userDetailsService){
         this.userRepo=userRepo;
+        this.userDetailsService = userDetailsService;
     }
 
     @Bean
     SecurityFilterChain securityConfig(HttpSecurity http) throws Exception {
 
       return  http.csrf(AbstractHttpConfigurer::disable)
+              .cors(cors->cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth->
-                        auth.requestMatchers("/login","/register","/addCart","/getCart","/getAllProducts")
+                        auth.requestMatchers("/login","/register","/getAllProducts")
                                 .permitAll().
                                 anyRequest().
                                 authenticated())
-                .sessionManagement(sess->sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+              .httpBasic(withDefaults())
+                .sessionManagement(sess->sess.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED))
                 .build();
     }
 
@@ -63,22 +74,17 @@ public class SecurityConfiguration {
     }
 
     @Bean
-    CorsFilter corsFilter(){
-
-        CorsConfiguration cors=new CorsConfiguration();
-
-        cors.addAllowedOrigin("http://localhost:3000");
-        cors.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
-        ));
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration cors = new CorsConfiguration();
+        cors.setAllowedOrigins(List.of("http://localhost:3000")); // Allow all origins for debugging
+        cors.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         cors.setAllowCredentials(true);
-        cors.setAllowedHeaders(List.of("Authorization","Content-Type"));
+        cors.setAllowedHeaders(List.of("Authorization", "Content-Type"));
         cors.setMaxAge(3600L);
 
-        UrlBasedCorsConfigurationSource source=new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**",cors);
-
-        return new CorsFilter(source);
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", cors);
+        return source;
     }
 
 
